test/errors/multiply-bool-number.ksu
; ERROR: Program exited with 1: * expects two integers; got BOOLEAN and NUMBER\nRuntime error: * expects two integers
(print (* #t 5))
